# CSC_499_Integrated_Analytics

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  census_2000_sample_places_sample_dimensions.csv  report-instructions.md  run_test.sh
app/: .main.cpp.swp  main.cpp  make_plot.cpp  profiler.cpp  profiling.cpp  unit_tests.cpp
include/: CSVParser.hpp  LeastSquaresFit.hpp  Plot.hpp  Plot_GL.hpp  csv.h  myLib.hpp
src/: CSVParser.cpp  LeastSquaresFit.cpp  Plot.cpp  myLib.cpp
